clean the code